Package_Tools/include-C/vips/pp/enumtypes.pp


unit enumtypes;
interface

{
  Automatically converted by H2Pas 1.0.0 from enumtypes.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    enumtypes.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{ This file is generated by glib-mkenums, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses.  }
{$ifndef VIPS_ENUM_TYPES_H}
{$define VIPS_ENUM_TYPES_H}
{ enumerations from "arithmetic.h"  }

function vips_operation_math_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_MATH : longint; { return type might be wrong }

function vips_operation_math2_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_MATH2 : longint; { return type might be wrong }

function vips_operation_round_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_ROUND : longint; { return type might be wrong }

function vips_operation_relational_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_RELATIONAL : longint; { return type might be wrong }

function vips_operation_boolean_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_BOOLEAN : longint; { return type might be wrong }

function vips_operation_complex_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_COMPLEX : longint; { return type might be wrong }

function vips_operation_complex2_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_COMPLEX2 : longint; { return type might be wrong }

function vips_operation_complexget_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_COMPLEXGET : longint; { return type might be wrong }

{ enumerations from "basic.h"  }
function vips_precision_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_PRECISION : longint; { return type might be wrong }

{ enumerations from "colour.h"  }
function vips_intent_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_INTENT : longint; { return type might be wrong }

function vips_pcs_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_PCS : longint; { return type might be wrong }

{ enumerations from "conversion.h"  }
function vips_extend_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_EXTEND : longint; { return type might be wrong }

function vips_compass_direction_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_COMPASS_DIRECTION : longint; { return type might be wrong }

function vips_direction_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_DIRECTION : longint; { return type might be wrong }

function vips_align_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_ALIGN : longint; { return type might be wrong }

function vips_angle_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_ANGLE : longint; { return type might be wrong }

function vips_angle45_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_ANGLE45 : longint; { return type might be wrong }

function vips_interesting_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_INTERESTING : longint; { return type might be wrong }

function vips_blend_mode_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_BLEND_MODE : longint; { return type might be wrong }

{ enumerations from "convolution.h"  }
function vips_combine_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_COMBINE : longint; { return type might be wrong }

{ enumerations from "create.h"  }
function vips_text_wrap_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_TEXT_WRAP : longint; { return type might be wrong }

{ enumerations from "draw.h"  }
function vips_combine_mode_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_COMBINE_MODE : longint; { return type might be wrong }

{ enumerations from "foreign.h"  }
function vips_foreign_flags_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_FLAGS : longint; { return type might be wrong }

function vips_fail_on_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FAIL_ON : longint; { return type might be wrong }

function vips_saveable_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_SAVEABLE : longint; { return type might be wrong }

function vips_foreign_keep_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_KEEP : longint; { return type might be wrong }

function vips_foreign_subsample_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_SUBSAMPLE : longint; { return type might be wrong }

function vips_foreign_jpeg_subsample_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_JPEG_SUBSAMPLE : longint; { return type might be wrong }

function vips_foreign_webp_preset_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_WEBP_PRESET : longint; { return type might be wrong }

function vips_foreign_tiff_compression_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_TIFF_COMPRESSION : longint; { return type might be wrong }

function vips_foreign_tiff_predictor_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_TIFF_PREDICTOR : longint; { return type might be wrong }

function vips_foreign_tiff_resunit_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_TIFF_RESUNIT : longint; { return type might be wrong }

function vips_foreign_png_filter_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_PNG_FILTER : longint; { return type might be wrong }

function vips_foreign_ppm_format_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_PPM_FORMAT : longint; { return type might be wrong }

function vips_foreign_dz_layout_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_DZ_LAYOUT : longint; { return type might be wrong }

function vips_foreign_dz_depth_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_DZ_DEPTH : longint; { return type might be wrong }

function vips_foreign_dz_container_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_DZ_CONTAINER : longint; { return type might be wrong }

function vips_foreign_heif_compression_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_HEIF_COMPRESSION : longint; { return type might be wrong }

function vips_foreign_heif_encoder_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_FOREIGN_HEIF_ENCODER : longint; { return type might be wrong }

{ enumerations from "image.h"  }
function vips_demand_style_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_DEMAND_STYLE : longint; { return type might be wrong }

function vips_image_type_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_IMAGE_TYPE : longint; { return type might be wrong }

function vips_interpretation_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_INTERPRETATION : longint; { return type might be wrong }

function vips_band_format_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_BAND_FORMAT : longint; { return type might be wrong }

function vips_coding_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_CODING : longint; { return type might be wrong }

function vips_access_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_ACCESS : longint; { return type might be wrong }

{ enumerations from "morphology.h"  }
function vips_operation_morphology_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_MORPHOLOGY : longint; { return type might be wrong }

{ enumerations from "object.h"  }
function vips_argument_flags_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_ARGUMENT_FLAGS : longint; { return type might be wrong }

{ enumerations from "operation.h"  }
function vips_operation_flags_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_FLAGS : longint; { return type might be wrong }

{ enumerations from "region.h"  }
function vips_region_shrink_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_REGION_SHRINK : longint; { return type might be wrong }

{ enumerations from "resample.h"  }
function vips_kernel_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_KERNEL : longint; { return type might be wrong }

function vips_size_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_SIZE : longint; { return type might be wrong }

{ enumerations from "util.h"  }
function vips_token_get_type:TGType;cdecl;external;
{ was #define dname def_expr }
function VIPS_TYPE_TOKEN : longint; { return type might be wrong }

{$endif}
{VIPS_ENUM_TYPES_H }
{ Generated data ends here  }

implementation

{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_MATH : longint; { return type might be wrong }
  begin
    VIPS_TYPE_OPERATION_MATH:=vips_operation_math_get_type;
  end;

{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_MATH2 : longint; { return type might be wrong }
  begin
    VIPS_TYPE_OPERATION_MATH2:=vips_operation_math2_get_type;
  end;

{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_ROUND : longint; { return type might be wrong }
  begin
    VIPS_TYPE_OPERATION_ROUND:=vips_operation_round_get_type;
  end;

{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_RELATIONAL : longint; { return type might be wrong }
  begin
    VIPS_TYPE_OPERATION_RELATIONAL:=vips_operation_relational_get_type;
  end;

{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_BOOLEAN : longint; { return type might be wrong }
  begin
    VIPS_TYPE_OPERATION_BOOLEAN:=vips_operation_boolean_get_type;
  end;

{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_COMPLEX : longint; { return type might be wrong }
  begin
    VIPS_TYPE_OPERATION_COMPLEX:=vips_operation_complex_get_type;
  end;

{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_COMPLEX2 : longint; { return type might be wrong }
  begin
    VIPS_TYPE_OPERATION_COMPLEX2:=vips_operation_complex2_get_type;
  end;

{ was #define dname def_expr }
function VIPS_TYPE_OPERATION_COMPLEXGET : longint; { return type might be wrong }
  begin
    VIPS_TYPE_OPERATION_COMPLEXGET:=vips_operation_complexget_get_type;
  end;

{ was #define dname def_expr }
function VIPS_TYPE_PRECISION : longint; { return type might be wrong }
  begin
    VIPS_TYPE_PRECISION:=vips_precision_get_type;
  end;

{ was #define dname def_expr }
function VIPS_TYPE_INTENT : longint; { return type might be wrong }
  begin
    VIPS_TYPE_INTENT:=vips_intent_get_type;
  end;
